fix slider flicker in chrome

--- a/app/assets/stylesheets/layout-fullscreen.css
+++ b/app/assets/stylesheets/layout-fullscreen.css
@@ -49,12 +49,15 @@ html, body, #wrapper {
 }
 .ui-sliderhider-title {
   padding: 10px;
+  cursor: pointer;
 }
 .ui-sliderhider-content {
   padding: 10px 0;
   overflow: hidden;
+  width:1px;
 }
 .ui-sliderhider-inner {
+  width:222px;
 }
 .ui-sliderhider-inner > div {
   float: left;
